--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4"
   }
 }
