--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
@@ -21,11 +18,16 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4"
+    "@types/aos": "^3.0.4",
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.13.1"
   }
 }
