--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.16.1",
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
+    "swr": "^2.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
