--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-player": "^2.12.0",
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
     "swr": "^2.1.0",
